--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 		<meta content="IE=edge" http-equiv="X-UA-Compatible">
 		<meta content="width=device-width, initial-scale=1" name="viewport">
 		<link rel="icon" href="./favicon.ico" type="image/x-icon">
-		<title>Text to Speech | Hoangvux</title>
-		<meta property="og:title" content="Text to Speech | Hoangvux">
+		<title>Text to Speech | 46264</title>
+		<meta property="og:title" content="Text to Speech | 46264">
 		<meta name="description" content="Get audio from Bing Microsoft Translator.">
-		<meta property="og:site_name" content="Text to Speech | Hoangvux">
+		<meta property="og:site_name" content="Text to Speech | 46264">
 		<meta property="og:description" content="Get audio from Bing Microsoft Translator.">
-		<meta property="og:image" content="https://hoangvux.github.io/text-to-speech/og-image.png">
+		<meta property="og:image" content="https://46264.github.io/text-to-speech/og-image.png">
 
 		<style>
 	    	body {     
@@ -22,7 +22,7 @@
 	</head>
 <body>
 	<center>
-		<p><b><a href="https://hoangvux.github.io/text-to-speech">TEXT TO SPEECH</a></b> - Get audio from Bing Microsoft Translator</p>
+		<p><b><a href="https://46264.github.io/text-to-speech">TEXT TO SPEECH</a></b> - Get audio from Bing Microsoft Translator</p>
 		<textarea id="langSource" onkeyup="countChar(this)" placeholder="Enter text here" maxlength="5000" aria-label="Text to be translated" style="background: transparent none repeat scroll 0% 0% !important; z-index: auto; padding:5px; position: relative; height: 400px; width: 800px;font-size: 14px; transition: none 0s ease 0s;"></textarea>
 		<br>
 		<br>
@@ -34,7 +34,7 @@
 		<br>
 		<br>
 		<audio id="audioEl" autoplay controls></audio>
-		<p>Copyright © 2018 <a href="https://github.com/Hoangvux">Hoangvux</a> - Hosted on <a href="https://github.com/Hoangvux/text-to-speech">GitHub</a></p>
+		<p>Copyright © 2018 <a target="_blank" href="https://github.com/46264">46264</a> - Hosted on <a target="_blank" href="https://github.com/46264/text-to-speech">GitHub</a></p>
 	</center>
 	<!-- Default JavaScript -->
 	<script src="https://code.jquery.com/jquery-1.5.js"></script>
